--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@ body {
   font-size: 18px;
 }
 
-h1{
-    color:white; 
-    text-align: center;
+h1 {
+  color: white;
+  text-align: center;
 }
 
 p {
@@ -22,27 +22,16 @@ p {
 
 /* Cards */
 .card-column {
-  width: 50%;
+  width: 90%;
+  height: 90%; 
   float: left;
   padding: 4%;
   box-sizing: border-box;
 }
 
-.column:nth-child(1) {
-  padding-top: 100px;
-}
-
-.column:nth-child(3) {
-    padding-top: 80px;
-  }
-
-.column:nth-child(4) {
-    padding-top: 150px;
-  }
-
 .card {
   width: 92%;
-  max-width: 340px;
+  height: 92%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -65,8 +54,8 @@ p {
 
 .card h2 {
   position: relative;
-  padding: 190px 0px 100px 50px;
-  width: 120%;
+  padding: 60vh 0px 100px 50px;
+  width: 100%;
 }
 
 a {
@@ -76,9 +65,10 @@ a {
 
 .card > iframe {
   width: 100%;
+  height: 54%;
   position: absolute;
-  top: -8%;
-  left: -8%;
+  top: -5%;
+  left: -6%;
   z-index: 99;
 }
 
@@ -110,4 +100,11 @@ a {
   .column:nth-child(1) > .card-color {
     padding-top: 0px;
   }
+}
+
+ul {
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
