--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background: #150f21;
-  font-size: 18px;
+  font-size: 25px;
+  font-family: "VT323", cursive;
 }
 
 h1 {
@@ -9,52 +10,48 @@ h1 {
 }
 
 p {
+  display: block;
+  text-align: center;
+  color: white;
   line-height: 1.5;
-}
-
-.container {
-  max-width: 90%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
 }
 
 /* Cards */
 .card-column {
   width: 90%;
-  height: 90%; 
   float: left;
-  padding: 4%;
-  box-sizing: border-box;
+  padding-left: 4%; 
+
 }
 
 .card {
   width: 92%;
-  height: 92%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  background: #eb5160;
+  background: linear-gradient(181deg, #fb8bd7, #fa2ccc 43%, #4d1cb3);
   color: #fff;
   cursor: pointer;
-  margin-bottom: 60px;
+  border-radius: 5px;
 }
 
 .border {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100%; 
   padding: 6px;
   border: 1px solid #fff;
   opacity: 0.5;
   left: -6px;
   top: -6px;
+  border-radius: 5px;
 }
 
 .card h2 {
   position: relative;
-  padding: 60vh 0px 100px 50px;
+  padding-top: 40vh;
+  padding-bottom: 35px;
+  padding-left: 100px;
   width: 100%;
 }
 
@@ -65,27 +62,11 @@ a {
 
 .card > iframe {
   width: 100%;
-  height: 54%;
+  height: 82%;
   position: absolute;
-  top: -5%;
-  left: -6%;
+  top: -4%;
+  left: 7%;
   z-index: 99;
-}
-
-.card-column:nth-child(1) > .card-color {
-  background-color: #eb5160;
-}
-
-.card-column:nth-child(2) > .card-color {
-  background-color: #8f3985;
-}
-
-.card-column:nth-child(3) > .card-color {
-  background-color: #8daa91;
-}
-
-.card-column:nth-child(4) > .card-color {
-  background-color: #888da7;
 }
 
 /* 
@@ -100,6 +81,11 @@ a {
   .column:nth-child(1) > .card-color {
     padding-top: 0px;
   }
+}
+
+img {
+  height: 20vh;
+  padding-left: 34vw;
 }
 
 ul {
