--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ p {
   text-align: center;
   color: white;
   line-height: 1.5;
+  
 }
 
 /* Cards */
@@ -85,12 +86,27 @@ a {
 
 img {
   height: 20vh;
-  padding-left: 34vw;
+  padding: 4vw;
 }
 
 ul {
   display: flex;
   width: 90%;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.explain {
+  width: 30vw; 
+  padding: 4vw;
+
+}
+
+.info {
+  display: flex; 
+}
+
+.container{
+  display: flex; 
   flex-wrap: wrap;
 }
