--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,14 @@ p {
   text-align: center;
   color: white;
   line-height: 1.5;
-  
+  max-width: 50vw;
 }
 
 /* Cards */
 .card-column {
   width: 90%;
   float: left;
-  padding-left: 4%; 
-
+  padding-left: 4%;
 }
 
 .card {
@@ -39,7 +38,7 @@ p {
 .border {
   position: absolute;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   padding: 6px;
   border: 1px solid #fff;
   opacity: 0.5;
@@ -51,7 +50,7 @@ p {
 .card h2 {
   position: relative;
   padding-top: 40vh;
-  padding-bottom: 35px;
+  padding-bottom: 15px;
   padding-left: 100px;
   width: 100%;
 }
@@ -85,8 +84,14 @@ a {
 }
 
 img {
-  height: 20vh;
-  padding: 4vw;
+  max-width: 50vw;
+  padding: 1vw;
+  max-height: 27vh;
+}
+
+.chatpic {
+  width: 35vw;
+  padding: 1vw;
 }
 
 ul {
@@ -97,16 +102,22 @@ ul {
 }
 
 .explain {
-  width: 30vw; 
-  padding: 4vw;
-
+  width: 57vw;
+  padding: 1vw;
 }
 
 .info {
-  display: flex; 
+  display: flex;
+  align-items: center;
+  margin-top: -4vh;
+  margin-bottom: -5vh;
 }
 
-.container{
-  display: flex; 
+.info div {
+  width: 30vw;
+}
+
+.container {
+  display: flex;
   flex-wrap: wrap;
 }
