--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,8 @@ img {
   max-width: 50vw;
   padding: 1vw;
   max-height: 27vh;
+  display: block;
+  margin: auto;
 }
 
 .chatpic {
@@ -111,10 +113,8 @@ ul {
   align-items: center;
   margin-top: -4vh;
   margin-bottom: -5vh;
-}
-
-.info div {
-  width: 30vw;
+  width: 100vw;
+  justify-content: space-evenly;
 }
 
 .container {
